Move CLI and core logic to separate packages